substrate/frame/support/test/tests/construct_runtime_ui/no_comma_after_where.stderr
error: Expected `,` or `{`
  --> tests/construct_runtime_ui/no_comma_after_where.rs:23:3
   |
23 |         Block = Block,
   |         ^^^^^
